change app settings

--- a/apps/ingestion-data-stores/.env
+++ b/apps/ingestion-data-stores/.env
@@ -3,27 +3,27 @@ export SIZE = 100
 export EVENTS = 100
 
 # mssql
-export MSSQL = "mssql+pymssql://sa:IlS27OpKxw9EYObU80dz@20.62.86.170:1433/owshq"
+export MSSQL = "mssql+pymssql://sa:IlS27OpKxw9EYObU80dz@[IP]:1433/owshq"
 
 # postgres
-export POSTGRES = "postgresql://postgres:6e8e5979-25c5-44e2-ad76-7a4e8ee68c6f@20.62.85.252:5432/owshq"
+export POSTGRES = "postgresql://postgres:6e8e5979-25c5-44e2-ad76-7a4e8ee68c6f@[IP]:5432/owshq"
 
 # mysql
-export MYSQL = "mysql+pymysql://root:8FlABrUE71@20.96.240.46:3306/owshq"
+export MYSQL = "mysql+pymysql://root:8FlABrUE71@[IP]:3306/owshq"
 
 # mongodb
-export MONGODB = "mongodb://root:w2nyCRBZKj@20.62.55.158:27017/owshq?authSource=admin"
+export MONGODB = "mongodb://root:w2nyCRBZKj@[IP]:27017/owshq?authSource=admin"
 export MONGODB_DATABASE = "owshq"
 
 # yugabytedb - [ysql & ycql]
-export YSQL = "postgresql://yugabyte:yugabyte@20.96.160.13:5433/owshq"
-export YCQL = "20.96.160.13"
+export YSQL = "postgresql://yugabyte:yugabyte@[IP]:5433/owshq"
+export YCQL = "[IP]"
 
 # apache kafka
 export KAFKA_CLIENT_ID_JSON = "python-data-store-events-json"
 export KAFKA_CLIENT_ID_AVRO = "python-data-store-events-avro"
-export KAFKA_BOOTSTRAP_SERVER = "52.138.109.159:9094"
-export KAFKA_SCHEMA_REGISTRY = "http://52.232.224.64:8081"
+export KAFKA_BOOTSTRAP_SERVER = "[IP]:9094"
+export KAFKA_SCHEMA_REGISTRY = "http://[IP]:8081"
 export KAFKA_TOPIC_USERS_JSON = "src-app-users-json"
 export KAFKA_TOPIC_CREDIT_CARD_JSON = "src-app-credit-card-json"
 export KAFKA_TOPIC_AGENT_JSON = "src-app-agent-json"
@@ -44,7 +44,7 @@ export KAFKA_TOPIC_USERS_WITHOUT_LOG_COMPACTION_JSON = "src-app-users-without-lo
 export KAFKA_TOPIC_USERS_WITH_LOG_COMPACTION_JSON = "src-app-users-with-log-compaction-json"
 
 # minio
-export MINIO = "20.62.75.137"
+export MINIO = "[IP]"
 export ACCESS_KEY = "H4aQRS39OITgclWk"
 export SECRET_KEY = "wRozzyetjvRrVQS9qpIzFVnimQFm9CqW"
 export LANDING_BUCKET = "landing"
@@ -58,6 +58,3 @@ export KEYWORDS_FILES = 'objects/keywords.csv'
 export ALBUMS_FILES = 'objects/albums.csv'
 export ARTISTS_FILES = 'objects/artists.csv'
 export RIDES_FILES = 'objects/rides.csv'
-
-
-
